Bug 408580 - NOAA environmental visualization picture of the day not working
Summary: NOAA environmental visualization picture of the day not working
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Picture of the Day (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Guo Yunhe
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-11 18:59 UTC by zzz
Modified: 2019-10-18 14:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.1
Sentry Crash Report:


Attachments
screeshot of last changed wallpaper from noaa (960.27 KB, image/png)
2019-06-11 18:59 UTC, zzz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description zzz 2019-06-11 18:59:42 UTC
Created attachment 120796 [details]
screeshot of last changed wallpaper from noaa

SUMMARY
One NOAA site picture of the day is regularly changed, but kde wallpaper doesn't. 

STEPS TO REPRODUCE
1. Always 

OBSERVED RESULT
Live wallpaper doesn't change since about month ago.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2019-06-13 21:19:37 UTC
What version of Plasma are you using? What distro?
Comment 2 zzz 2019-06-13 23:34:06 UTC
NAME="KDE neon"
VERSION="5.16"
ID=neon
ID_LIKE="ubuntu debian"
PRETTY_NAME="KDE neon User Edition 5.16"
VARIANT="User Edition"
VERSION_ID="18.04"
HOME_URL="http://neon.kde.org/"
Comment 3 zzz 2019-06-13 23:41:02 UTC
Operating System: KDE neon 5.16
KDE Plasma Version: 5.16.0
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.3
Kernel Version: 4.18.0-21-generic
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7 CPU Q 720 @ 1.60GHz
Memory: 3,8 GiB of RAM
Comment 4 Nate Graham 2019-06-14 04:38:01 UTC
Can confirm. Not related to any particular Plasma release though; looks like NOAA changes the URLs again. :/
Comment 5 Guo Yunhe 2019-10-17 11:59:09 UTC
Some POTD providers' URL are blocked (flickr, wikipedia) or very slow (unsplash) in China.

In case of network issues or provider issues, we should show users some information instead of a black screen.
Comment 6 Guo Yunhe 2019-10-17 12:09:35 UTC
The original page in NOAA provider doesn't load images. Should images in this page be used for POTD? https://www.nesdis.noaa.gov/satellites-image-of-the-day
Comment 7 Guo Yunhe 2019-10-17 12:10:38 UTC
Oh, it can be loaded. Just need to change the regular expression.
Comment 8 Guo Yunhe 2019-10-17 12:51:41 UTC
Here is the patch https://phabricator.kde.org/D24727
Comment 9 Guo Yunhe 2019-10-18 14:11:59 UTC
Git commit 43247057660513cbc942505eeba6e24c6811d0d9 by Guo Yunhe.
Committed on 18/10/2019 at 14:11.
Pushed by guoyunhe into branch 'master'.

Fix NOAA picture of the day provider

Summary:
The webpage structure of NOAA changed so the old regular expression doesn't work anymore. Updated it. But it can break in future again.

{F7614976}

Reviewers: #plasma, sitter

Reviewed By: sitter

Subscribers: sitter, ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D24727

M  +8    -40   dataengines/potd/noaaprovider.cpp
M  +5    -6    dataengines/potd/noaaprovider.h

https://commits.kde.org/kdeplasma-addons/43247057660513cbc942505eeba6e24c6811d0d9
Comment 10 Nate Graham 2019-10-18 14:58:50 UTC
Git commit b2d041fb4a276d006b0062ab5088765d171b7c91 by Nate Graham, on behalf of Guo Yunhe.
Committed on 18/10/2019 at 14:58.
Pushed by ngraham into branch 'Plasma/5.17'.

Fix NOAA picture of the day provider

Summary:
The webpage structure of NOAA changed so the old regular expression doesn't work anymore. Updated it. But it can break in future again.

{F7614976}

Reviewers: #plasma, sitter

Reviewed By: sitter

Subscribers: sitter, ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D24727

M  +8    -40   dataengines/potd/noaaprovider.cpp
M  +5    -6    dataengines/potd/noaaprovider.h

https://commits.kde.org/kdeplasma-addons/b2d041fb4a276d006b0062ab5088765d171b7c91