Fix NOAA picture of the day provider

Summary:
The webpage structure of NOAA changed so the old regular expression doesn't work anymore. Updated it. But it can break in future again.

{F7614976}

BUG: 408580

Reviewers: #plasma, sitter

Reviewed By: sitter

Subscribers: sitter, ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D24727